contour/manifests/echoserver-ingress-with-ip.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
spec:
  tls:
    - secretName: ingress
  rules:
  - host: echoserver.127-0-0-101.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 80
  defaultBackend:
   service:
    name: echoserver
    port:
      number: 80
